@@ -41,11 +41,11 @@ else
 
 if($_REQUEST['submit']['save'] && $_REQUEST['food_service'] && $_POST['food_service'] && AllowEdit())
 {
-	$events_RET = DBGet(DBQuery("SELECT ID,to_char(SCHOOL_DATE,'dd-MON-yy') AS SCHOOL_DATE 
-	FROM CALENDAR_EVENTS 
-	WHERE SCHOOL_DATE BETWEEN '".date('d-M-y',$time)."' AND '".date('d-M-y',$time_last)."' 
-	AND SYEAR='".UserSyear()."' 
-	AND SCHOOL_ID='".UserSchool()."' 
+	$events_RET = DBGet(DBQuery("SELECT ID,to_char(SCHOOL_DATE,'dd-MON-yy') AS SCHOOL_DATE
+	FROM CALENDAR_EVENTS
+	WHERE SCHOOL_DATE BETWEEN '".date('d-M-y',$time)."' AND '".date('d-M-y',$time_last)."'
+	AND SYEAR='".UserSyear()."'
+	AND SCHOOL_ID='".UserSchool()."'
 	AND TITLE='".$menus_RET[$_REQUEST['menu_id']][1]['TITLE']."'"),array(),array('SCHOOL_DATE'));
 	//echo '<pre>'; var_dump($events_RET); echo '</pre>';
 
@@ -66,11 +66,11 @@ if($_REQUEST['submit']['save'] && $_REQUEST['food_service'] && $_POST['food_serv
 
 if($_REQUEST['submit']['print'])
 {
-	$events_RET = DBGet(DBQuery("SELECT TITLE,DESCRIPTION,to_char(SCHOOL_DATE,'dd-MON-yy') AS SCHOOL_DATE 
-	FROM CALENDAR_EVENTS 
-	WHERE SCHOOL_DATE BETWEEN '".date('d-M-y',$time)."' AND '".date('d-M-y',$time_last)."' 
-	AND SYEAR='".UserSyear()."' 
-	AND SCHOOL_ID='".UserSchool()."' 
+	$events_RET = DBGet(DBQuery("SELECT TITLE,DESCRIPTION,to_char(SCHOOL_DATE,'dd-MON-yy') AS SCHOOL_DATE
+	FROM CALENDAR_EVENTS
+	WHERE SCHOOL_DATE BETWEEN '".date('d-M-y',$time)."' AND '".date('d-M-y',$time_last)."'
+	AND SYEAR='".UserSyear()."'
+	AND SCHOOL_ID='".UserSchool()."'
 	AND (TITLE='".$menus_RET[$_REQUEST['menu_id']][1]['TITLE']."' OR TITLE='No School')"),array(),array('SCHOOL_DATE'));
 
 	$skip = date("w",$time);
@@ -139,21 +139,21 @@ else
 		}
 	}
 
-	$calendar_RET = DBGet(DBQuery("SELECT to_char(SCHOOL_DATE,'dd-MON-YY') as SCHOOL_DATE 
-	FROM ATTENDANCE_CALENDAR 
-	WHERE SCHOOL_DATE BETWEEN '".date('d-M-y',$time)."' AND '".date('d-M-y',$time_last)."' 
-	AND SYEAR='".UserSyear()."' 
-	AND SCHOOL_ID='".UserSchool()."' 
-	AND CALENDAR_ID='".$calendar_id."' 
-	AND MINUTES>0 
+	$calendar_RET = DBGet(DBQuery("SELECT to_char(SCHOOL_DATE,'dd-MON-YY') as SCHOOL_DATE
+	FROM ATTENDANCE_CALENDAR
+	WHERE SCHOOL_DATE BETWEEN '".date('d-M-y',$time)."' AND '".date('d-M-y',$time_last)."'
+	AND SYEAR='".UserSyear()."'
+	AND SCHOOL_ID='".UserSchool()."'
+	AND CALENDAR_ID='".$calendar_id."'
+	AND MINUTES>0
 	ORDER BY SCHOOL_DATE"),array(),array('SCHOOL_DATE'));
 
-	$events_RET = DBGet(DBQuery("SELECT ID,TITLE,DESCRIPTION,to_char(SCHOOL_DATE,'dd-MON-yy') AS SCHOOL_DATE 
-	FROM CALENDAR_EVENTS 
-	WHERE SCHOOL_DATE BETWEEN '".date('d-M-y',$time)."' AND '".date('d-M-y',$time_last)."' 
-	AND SYEAR='".UserSyear()."' 
-	AND SCHOOL_ID='".UserSchool()."' 
-	AND TITLE='".$menus_RET[$_REQUEST['menu_id']][1]['TITLE']."' 
+	$events_RET = DBGet(DBQuery("SELECT ID,TITLE,DESCRIPTION,to_char(SCHOOL_DATE,'dd-MON-yy') AS SCHOOL_DATE
+	FROM CALENDAR_EVENTS
+	WHERE SCHOOL_DATE BETWEEN '".date('d-M-y',$time)."' AND '".date('d-M-y',$time_last)."'
+	AND SYEAR='".UserSyear()."'
+	AND SCHOOL_ID='".UserSchool()."'
+	AND TITLE='".$menus_RET[$_REQUEST['menu_id']][1]['TITLE']."'
 	ORDER BY SCHOOL_DATE"),array('DESCRIPTION'=>'makeDescriptionInput','SCHOOL_DATE'=>'ProperDate'));
 
 	$events_RET[0] = array(); // make sure indexing from 1
@@ -168,7 +168,7 @@ else
 
 	$tabs = array();
 	foreach($menus_RET as $id=>$meal)
-		$tabs[] = array('title'=>$meal[1]['TITLE'],'link'=>'Modules.php?modname='.$_REQUEST['modname'].'&menu_id=$id&month='.$_REQUEST['month'].'&year='.$_REQUEST['year']);
+		$tabs[] = array('title'=>$meal[1]['TITLE'],'link'=>'Modules.php?modname='.$_REQUEST['modname'].'&menu_id=' . $id . '&month='.$_REQUEST['month'].'&year='.$_REQUEST['year']);
 
 	$extra = array('save'=>false,'search'=>false,
 		'header'=>WrapTabs($tabs,'Modules.php?modname='.$_REQUEST['modname'].'&menu_id='.$_REQUEST['menu_id'].'&month='.$_REQUEST['month'].'&year='.$_REQUEST['year']));
