@@ -13,6 +13,7 @@ Changes in 2.8.27
 - Fix Custom User Permissions: remove default program in Exceptions.php
 - Fix Portal Polls display for Teachers & Parents in Portal.php
 - Fix more than 1 row returned SQL error in GPA widget: use REPORTING_GP_SCALE in Widgets.fnc.php
+- Fix menu_id's $id var for Menus tabs in DailyMenus.php
 
 Changes in 2.8.26
 -----------------
